backend/deploy/chart/templates/ingress.yaml
{ { - if .Values.ingress.enabled - } }
  { { - $fullName := include "chart.fullname" . - } }
  { { - $svcPort := .Values.service.port - } }
  { { - if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) } }
  { { - if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") } }
  { { - $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className } }
  { { - end } }
  { { - end } }
  { { - if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion - } }
apiVersion: networking.k8s.io/v1
  { { - else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion - } }
apiVersion: networking.k8s.io/v1beta1
  { { - else - } }
apiVersion: extensions/v1beta1
  { { - end } }
kind: Ingress
metadata:
  name: { { $fullName } }
  labels:
    { { - include "chart.labels" . | nindent 4 } }
  { { - with .Values.ingress.annotations } }
  annotations:
    { { - toYaml . | nindent 4 } }
  { { - end } }
spec:
  { { - if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) } }
  ingressClassName: { { .Values.ingress.className } }
  { { - end } }
  { { - if .Values.ingress.tls } }
  tls:
    { { - range .Values.ingress.tls } }
    - hosts:
        { { - range .hosts } }
        - { { . | quote } }
        { { - end } }
      secretName: { { .secretName } }
    { { - end } }
  { { - end } }
  rules:
    { { - range .Values.ingress.hosts } }
    - host: { { .host | quote } }
      http:
        paths:
          { { - range .paths } }
          - path: { { .path } }
            { { - if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) } }
            pathType: { { .pathType } }
            { { - end } }
            backend:
              { { - if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion } }
              service:
                name: { { $fullName } }
                port:
                  number: { { $svcPort } }
              { { - else } }
              serviceName: { { $fullName } }
              servicePort: { { $svcPort } }
              { { - end } }
          { { - end } }
    { { - end } }
  { { - end } }
